# genui-schema

./: README.md  pyproject.toml
catalog/: components.yaml
design/: composition.yaml  gen-ui.yaml  tokens.yaml
docs/: component-reference.md  design.md  wire-protocol.md
schema/: compose_ui_tool.yaml  wire_protocol.yaml
src/genui_graph_schema/: __init__.py
src/genui_schema/: __init__.py  models.py  prompt.py  validation.py
src/operator_display_schema/: __init__.py  catalog.py  design.py  models.py  prompt.py  validation.py
tests/: test_catalog.py  test_design.py  test_models.py  test_prompt.py  test_style_defaults.py  test_token_validation.py  test_validation.py
