[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genui-graph-schema"
version = "0.1.0"
description = "GenUI graph schema — declarative component catalog and wire protocol for agent-driven UI rendering"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.hatch.build.targets.wheel]
packages = ["src/genui_graph_schema"]

[tool.hatch.build.targets.wheel.force-include]
"catalog" = "genui_graph_schema/catalog"
"schema" = "genui_graph_schema/schema"
"design" = "genui_graph_schema/design"
